unpackaged/main/default/objects/ClientBooking__c/ClientBooking__c.object-meta.xml
<CustomObject>
    <label>Client Booking</label>
    <nameField>
        <displayFormat>CB-{00000}</displayFormat>
        <label>Client Booking</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Client Bookings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>