unpackaged/main/default/objects/ClientBooking__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Client Bookings</relationshipLabel>
    <relationshipName>ClientBookings</relationshipName>
    <type>Lookup</type>
</CustomField>