unpackaged/main/default/objects/ClientBooking__c/fields/Attendance__c.field-meta.xml
<CustomField>
    <fullName>Attendance__c</fullName>
    <label>Attendance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Expecting</fullName>
            </value>
            <value>
                <fullName>Show</fullName>
            </value>
            <value>
                <fullName>NoShow</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>