unpackaged/main/default/objects/ClientBooking__c/fields/BookingMethod__c.field-meta.xml
<CustomField>
    <fullName>BookingMethod__c</fullName>
    <label>Booking Method</label>
    <length>50</length>
    <type>Text</type>
</CustomField>