unpackaged/main/default/objects/ClientBooking__c/fields/BookingModificationUrl__c.field-meta.xml
<CustomField>
    <fullName>BookingModificationUrl__c</fullName>
    <label>Booking Modification Url</label>
    <type>Url</type>
</CustomField>