unpackaged/main/default/objects/ClientBooking__c/fields/Calendar_ICS_Link__c.field-meta.xml
<CustomField>
    <fullName>Calendar_ICS_Link__c</fullName>
    <label>Calendar ICS Link</label>
    <type>Url</type>
</CustomField>