unpackaged/main/default/objects/ClientBooking__c/fields/ClientCommunication__c.field-meta.xml
<CustomField>
    <fullName>ClientCommunication__c</fullName>
    <description>This variable describes how client communications should be managed.
- DoNotSend
Do not send any message to the client or attendee of this booking.

- ClientOnly
Only send messages to the client of the booking.</description>
    <label>Client Communication</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DoNotSend</fullName>
            </value>
            <value>
                <fullName>ClientOnly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>