unpackaged/main/default/objects/ClientBooking__c/fields/ConfirmationNumber__c.field-meta.xml
<CustomField>
    <fullName>ConfirmationNumber__c</fullName>
    <description>Contains a booking&#39;s confirmation number</description>
    <externalId>true</externalId>
    <label>Confirmation Number</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>