unpackaged/main/default/objects/ClientBooking__c/fields/CreatedBy__c.field-meta.xml
<CustomField>
    <fullName>CreatedBy__c</fullName>
    <label>CreatedBy</label>
    <length>50</length>
    <type>Text</type>
</CustomField>