unpackaged/main/default/objects/ClientBooking__c/fields/CreatedByStaffId__c.field-meta.xml
<CustomField>
    <fullName>CreatedByStaffId__c</fullName>
    <label>CreatedByStaffId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>