unpackaged/main/default/objects/ClientBooking__c/fields/CreatedOn__c.field-meta.xml
<CustomField>
    <fullName>CreatedOn__c</fullName>
    <label>CreatedOn</label>
    <type>DateTime</type>
</CustomField>