unpackaged/main/default/objects/ClientBooking__c/fields/Firstname__c.field-meta.xml
<CustomField>
    <fullName>Firstname__c</fullName>
    <label>Firstname</label>
    <length>50</length>
    <type>Text</type>
</CustomField>