unpackaged/main/default/objects/ClientBooking__c/fields/InternalNotes__c.field-meta.xml
<CustomField>
    <fullName>InternalNotes__c</fullName>
    <label>Internal Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>