unpackaged/main/default/objects/ClientBooking__c/fields/isRescheduled__c.field-meta.xml
<CustomField>
    <fullName>isRescheduled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isRescheduled</label>
    <type>Checkbox</type>
</CustomField>