unpackaged/main/default/objects/ClientBooking__c/fields/isScheduled__c.field-meta.xml
<CustomField>
    <fullName>isScheduled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isScheduled</label>
    <type>Checkbox</type>
</CustomField>