unpackaged/main/default/objects/ClientBooking__c/fields/Language__c.field-meta.xml
<CustomField>
    <fullName>Language__c</fullName>
    <label>Language</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>bul</fullName>
                <label>Bulgarian</label>
            </value>
            <value>
                <fullName>yue</fullName>
                <label>Chinese Traditional</label>
            </value>
            <value>
                <fullName>ces</fullName>
                <label>Czech</label>
            </value>
            <value>
                <fullName>dan</fullName>
                <label>Danish</label>
            </value>
            <value>
                <fullName>deu</fullName>
                <label>Deutsch</label>
            </value>
            <value>
                <fullName>nld</fullName>
                <label>Dutch</label>
            </value>
            <value>
                <fullName>eng</fullName>
                <label>English</label>
            </value>
            <value>
                <fullName>fra</fullName>
                <label>French</label>
            </value>
            <value>
                <fullName>ell</fullName>
                <label>Greek</label>
            </value>
            <value>
                <fullName>ita</fullName>
                <label>Italian</label>
            </value>
            <value>
                <fullName>jpn</fullName>
                <label>Japanese</label>
            </value>
            <value>
                <fullName>kor</fullName>
                <label>Korean</label>
            </value>
            <value>
                <fullName>pol</fullName>
                <label>Polish</label>
            </value>
            <value>
                <fullName>por</fullName>
                <label>Portuguese</label>
            </value>
            <value>
                <fullName>ron</fullName>
                <label>Romanian</label>
            </value>
            <value>
                <fullName>rus</fullName>
                <label>Russian</label>
            </value>
            <value>
                <fullName>spa</fullName>
                <label>Spanish</label>
            </value>
            <value>
                <fullName>swe</fullName>
                <label>Swedish</label>
            </value>
            <value>
                <fullName>tur</fullName>
                <label>Turkish</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>