unpackaged/main/default/objects/ClientBooking__c/fields/Lastname__c.field-meta.xml
<CustomField>
    <fullName>Lastname__c</fullName>
    <label>Lastname</label>
    <length>50</length>
    <type>Text</type>
</CustomField>