unpackaged/main/default/objects/ClientBooking__c/fields/LocaleDateTime__c.field-meta.xml
<CustomField>
    <fullName>LocaleDateTime__c</fullName>
    <description>Locale Date Time calculated according to the given TimeZone before inserting or updating the record</description>
    <label>Locale Date Time</label>
    <type>DateTime</type>
</CustomField>