unpackaged/main/default/objects/ClientBooking__c/fields/Locate_Link__c.field-meta.xml
<CustomField>
    <fullName>Locate_Link__c</fullName>
    <label>Locate Link</label>
    <type>Url</type>
</CustomField>