unpackaged/main/default/objects/ClientBooking__c/fields/MerchantAddressCity__c.field-meta.xml
<CustomField>
    <fullName>MerchantAddressCity__c</fullName>
    <label>Merchant Address City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>