unpackaged/main/default/objects/ClientBooking__c/fields/MerchantAddressCountry__c.field-meta.xml
<CustomField>
    <fullName>MerchantAddressCountry__c</fullName>
    <label>Merchant Address Country</label>
    <length>50</length>
    <type>Text</type>
</CustomField>