unpackaged/main/default/objects/ClientBooking__c/fields/MerchantAddressPostalCode__c.field-meta.xml
<CustomField>
    <fullName>MerchantAddressPostalCode__c</fullName>
    <label>Merchant Address Postal Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>