unpackaged/main/default/objects/ClientBooking__c/fields/MerchantAddressState__c.field-meta.xml
<CustomField>
    <fullName>MerchantAddressState__c</fullName>
    <label>Merchant Address State</label>
    <length>50</length>
    <type>Text</type>
</CustomField>