unpackaged/main/default/objects/ClientBooking__c/fields/MerchantAddressStreet__c.field-meta.xml
<CustomField>
    <fullName>MerchantAddressStreet__c</fullName>
    <label>Merchant Address Street</label>
    <length>128</length>
    <type>Text</type>
</CustomField>