unpackaged/main/default/objects/ClientBooking__c/fields/MerchantId__c.field-meta.xml
<CustomField>
    <fullName>MerchantId__c</fullName>
    <label>MerchantId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>