unpackaged/main/default/objects/ClientBooking__c/fields/ModifiedBy__c.field-meta.xml
<CustomField>
    <fullName>ModifiedBy__c</fullName>
    <label>ModifiedBy</label>
    <length>50</length>
    <type>Text</type>
</CustomField>