unpackaged/main/default/objects/ClientBooking__c/fields/ModifiedByStaffId__c.field-meta.xml
<CustomField>
    <fullName>ModifiedByStaffId__c</fullName>
    <label>Modified By StaffId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>