unpackaged/main/default/objects/ClientBooking__c/fields/ModifiedOn__c.field-meta.xml
<CustomField>
    <fullName>ModifiedOn__c</fullName>
    <label>ModifiedOn</label>
    <type>DateTime</type>
</CustomField>