unpackaged/main/default/objects/ClientBooking__c/fields/RemindByEmail__c.field-meta.xml
<CustomField>
    <fullName>RemindByEmail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Remind By Email</label>
    <type>Checkbox</type>
</CustomField>