unpackaged/main/default/objects/ClientBooking__c/fields/Ressource__c.field-meta.xml
<CustomField>
    <fullName>Ressource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ressource</label>
    <referenceTo>AppointmentRessource__c</referenceTo>
    <relationshipLabel>Client Bookings</relationshipLabel>
    <relationshipName>ClientBookings</relationshipName>
    <type>Lookup</type>
</CustomField>