unpackaged/main/default/objects/ClientBooking__c/fields/RessourceId__c.field-meta.xml
<CustomField>
    <fullName>RessourceId__c</fullName>
    <label>RessourceId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>