unpackaged/main/default/objects/ClientBooking__c/fields/Salutation__c.field-meta.xml
<CustomField>
    <fullName>Salutation__c</fullName>
    <label>Salutation</label>
    <length>50</length>
    <type>Text</type>
</CustomField>