unpackaged/main/default/objects/ClientBooking__c/fields/sendCancellation__c.field-meta.xml
<CustomField>
    <fullName>sendCancellation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When true a cancellation email is sent</description>
    <inlineHelpText>When true a cancellation email is sent</inlineHelpText>
    <label>sendCancellation</label>
    <type>Checkbox</type>
</CustomField>