unpackaged/main/default/objects/ClientBooking__c/fields/sendReminder__c.field-meta.xml
<CustomField>
    <fullName>sendReminder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>sendReminder</label>
    <type>Checkbox</type>
</CustomField>