unpackaged/main/default/objects/ClientBooking__c/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service</label>
    <referenceTo>AppointmentService__c</referenceTo>
    <relationshipLabel>Client Bookings</relationshipLabel>
    <relationshipName>ClientBookings</relationshipName>
    <type>Lookup</type>
</CustomField>