unpackaged/main/default/objects/ClientBooking__c/fields/ServiceId__c.field-meta.xml
<CustomField>
    <fullName>ServiceId__c</fullName>
    <label>ServiceId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>