unpackaged/main/default/objects/ClientBooking__c/fields/StaffCode__c.field-meta.xml
<CustomField>
    <fullName>StaffCode__c</fullName>
    <formula>User__r.StaffCode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>StaffCode</label>
    <type>Text</type>
</CustomField>