unpackaged/main/default/objects/ClientBooking__c/fields/StaffId__c.field-meta.xml
<CustomField>
    <fullName>StaffId__c</fullName>
    <label>StaffId</label>
    <length>10</length>
    <type>Text</type>
</CustomField>