unpackaged/main/default/objects/ClientBooking__c/fields/StartsOn__c.field-meta.xml
<CustomField>
    <fullName>StartsOn__c</fullName>
    <description>Appointment Date and TIme</description>
    <inlineHelpText>Appointment Date and TIme</inlineHelpText>
    <label>StartsOn</label>
    <type>DateTime</type>
</CustomField>