unpackaged/main/default/objects/ClientBooking__c/fields/Store__c.field-meta.xml
<CustomField>
    <fullName>Store__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Store</label>
    <referenceTo>Store__c</referenceTo>
    <relationshipLabel>Client Bookings</relationshipLabel>
    <relationshipName>Client_Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>