unpackaged/main/default/objects/ClientBooking__c/fields/StoreCode__c.field-meta.xml
<CustomField>
    <fullName>StoreCode__c</fullName>
    <formula>User__r.StoreCode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>StoreCode</label>
    <type>Text</type>
</CustomField>