unpackaged/main/default/objects/ClientBooking__c/fields/TimeZone__c.field-meta.xml
<CustomField>
    <fullName>TimeZone__c</fullName>
    <label>TimeZone</label>
    <length>128</length>
    <type>Text</type>
</CustomField>